
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int uint8 ;
typedef int uint16 ;
struct TYPE_6__ {scalar_t__ end; scalar_t__ p; } ;
typedef TYPE_1__* STREAM ;


 int in_uint16_le (TYPE_1__*,int) ;
 int in_uint8s (TYPE_1__*,int) ;
 scalar_t__ next_packet ;
 TYPE_1__* sec_recv () ;

__attribute__((used)) static STREAM
rdp_recv(uint8 * type)
{
 static STREAM rdp_s;
 uint16 length, pdu_type;

 if ((rdp_s == ((void*)0)) || (next_packet >= rdp_s->end))
 {
  rdp_s = sec_recv();
  if (rdp_s == ((void*)0))
   return ((void*)0);

  next_packet = rdp_s->p;
 }
 else
 {
  rdp_s->p = next_packet;
 }

 in_uint16_le(rdp_s, length);

 if (length == 0x8000)
 {
  next_packet += 8;
  *type = 0;
  return rdp_s;
 }
 in_uint16_le(rdp_s, pdu_type);
 in_uint8s(rdp_s, 2);
 *type = pdu_type & 0xf;


 next_packet += length;
 return rdp_s;
}
